--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,21 +9,9 @@ jobs:
   build-manager:
     uses: ./.github/workflows/build-manager.yml
     secrets: inherit
-  build-gki-image:
-    uses: ./.github/workflows/build-gki-image.yml
-    secrets: inherit
-  build-wsa-kernel:
-    uses: ./.github/workflows/build-kernel-wsa.yml
-    secrets: inherit
-  build-arcvm-kernel:
-    uses: ./.github/workflows/build-kernel-arcvm.yml
-    secrets: inherit
   release:
     needs:
       - build-manager
-      - build-gki-image
-      - build-wsa-kernel
-      - build-arcvm-kernel
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
@@ -77,9 +65,5 @@ jobs:
         with:
           files: |
             manager/*.apk
-            android*-lkm/*_kernelsu.ko
-            AnyKernel3-*.zip
-            boot-images-*/Image-*/*.img.gz
-            kernel-WSA*.zip
-            kernel-ARCVM*.zip
-            ksud/ksud-*
+            ksud-*
+
