--- a/.github/workflows/ksud.yml
+++ b/.github/workflows/ksud.yml
@@ -45,7 +45,7 @@ jobs:
 
     - name: Install cross
       run: |
-        cargo install cross --git https://github.com/cross-rs/cross --rev 66845c1
+        RUSTFLAGS="" cargo install cross --git https://github.com/cross-rs/cross --rev 66845c1
 
     - name: Build ksud
       run: CROSS_NO_WARNINGS=0 cross build --target ${{ inputs.target }} --release --manifest-path ./userspace/ksud/Cargo.toml
