--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -6,6 +6,14 @@ config KSU
 	help
 	  Enable kernel-level root privileges on Android System.
 
+config KSU_EXTRAS
+	bool "Enable custom stuff"
+	depends on KSU
+	default y
+	help
+	  Custom extensions. Experimental.
+	  Currently, only avc log spoofing is implemented.
+
 config KSU_DEBUG
 	bool "KernelSU debug mode"
 	depends on KSU
