--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -7,10 +7,18 @@ config KSU
 	help
 	  Enable kernel-level root privileges on Android System.
 
+config KSU_EXTRAS
+	bool "Enable custom stuff"
+	depends on KSU
+	default y
+	help
+	  Custom extensions. Experimental.
+	  Currently, only avc log spoofing is implemented.
+
 config KSU_TAMPER_SYSCALL_TABLE
 	bool "EXPERIMENTAL: tamper sys_call_table for sucompat + sys_reboot"
 	depends on ARM64 && !KSU_KRETPROBES_SUCOMPAT
-	default n
+	default y
 	help
 	  EXPERIMENTAL: use syscall table hijacking method demonstrated on zx2c4's
 	  kernel-assisted-superuser. Replaces sys_reboot, sys_execve, sys_newfstatat,
