--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -6,15 +6,11 @@ $(info -- MDIR: $(MDIR))
 
 .PHONY: all compdb clean
 
-all: check_symbol
+all:
 	make -C $(KDIR) M=$(MDIR) modules
-	./check_symbol kernelsu.ko $(KDIR)/vmlinux
 compdb:
 	python3 $(MDIR)/.vscode/generate_compdb.py -O $(KDIR) $(MDIR)
 clean:
 	make -C $(KDIR) M=$(MDIR) clean
-	rm check_symbol
-check_symbol: tools/check_symbol.c
-	$(CC) tools/check_symbol.c -o check_symbol
 
 # Keep a new line here!! Because someone may append config
